支持 MathJax 数学公式

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,8 @@
 {#    <script src="{% static 'blog/js/bootstrap.min.js' %}"></script>#}
     <script src="{% static 'blog/js/pace.min.js' %}"></script>
     <script src="{% static 'blog/js/modernizr.custom.js' %}"></script>
-
+    <!-- math -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 </head>
 
 <body>
