--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,8 @@
 {#    <link rel = stylesheet href="{% static 'blog/css/bootstrap.min.css' %}">#}
     <link rel = stylesheet href="{% static 'blog/css/pace.css' %}">
     <link rel = stylesheet href="{% static 'blog/css/custom.css' %}">
-    <link href="https://cdn.bootcss.com/highlight.js/9.15.8/styles/github.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/highlight.js/9.15.10/styles/atelier-sulphurpool-light.min.css" rel="stylesheet">
+
     <style>
         .codehilite {
             padding: 0;
@@ -33,14 +34,14 @@
           user-select: none;
 
           text-align: center;
-          color: #0e84b5;
+          color: #d43f3d;
           border-right: 1px solid #CCC;
           vertical-align: top;
           padding-right: 5px;
         }
 
         .hljs-ln-n {
-          width: 30px;
+          width: 40px;
         }
 
         /* for block of code */
