--- a/templates/base.html
+++ b/templates/base.html
@@ -132,6 +132,10 @@
                 {% show_archives %}
                 {% show_categories %}
                 {% show_tags %}
+
+                <div class="rss">
+                    <a href="{% url 'rss' %}"><span class="ion-social-rss-outline"></span> RSS 订阅</a>
+                </div>
             </aside>
         </div>
     </div>
