--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,9 @@
           padding-left: 10px;
           white-space: pre;
         }
+        span.highlighted {
+            color: red;
+        }
     </style>
 
 
@@ -96,8 +99,8 @@
                 <div id="header-search-box">
                     <a id="search-menu" href="#"><span id="search-icon" class="ion-ios-search-strong"></span></a>
                     <div id="search-form" class="search-form">
-                        <form role="search" method="get" id="searchform" action="{% url 'blog:search' %}">
-                            <input type="search" placeholder="搜索" name="que">
+                        <form role="search" method="get" id="searchform" action="{% url 'haystack_search' %}">
+                            <input type="search" placeholder="搜索" name="q" required>
                             <button type="submit"><span class="ion-ios-search-strong"></span></button>
                         </form>
                     </div>
@@ -129,7 +132,6 @@
             <aside class="col-md-4">
                 {% block toc %}
                 {% endblock toc %}
-
                 {% show_recent_posts %}
                 {% show_archives %}
                 {% show_categories %}
